<resources>
    <string name="app_name">Let me App</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Log in</string>
    <string name="strSignup">Sign Up</string>
    <string name="strUsuario">User</string>
    <string name="strName">Name and Surname</string>
    <string name="strMail" translatable="false">E-mail</string>
    <string name="strtelefono">Telephone</string>
    <string name="strAddObject">Add Object</string>
    <string name="strObjectName">Object name</string>
    <string name="strObjectDescription">Object Description</string>
    <string name="strObjectDisponibility">Object Disponibility</string>
    <string name="strSendRequest">Send Request</string>
    <string name="strRequestLabel">Request data</string>
    <string name="strLendTime">Lend time</string>
    <string name="strLendMessage">Message</string>
    <string name="strSend">Send</string>
    <string name="strEdit">Edit</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nav_header_desc">Description</string>
    <string name="nav_header_title">Incomplete profile</string>
    <string name="nav_header_subtitle">Click the image to complete</string>
    <string name="strAbout">About</string>
    <string name="strUser">User</string>
    <string name="strDeveloperName" translatable="false">Francisco Javier Aranda Caro</string>
    <string name="strDeveloperJob">Developer</string>
    <string name="strDeveloperInfo">Interested on technologies, car, motorbikes and sports.</string>
    <string name="strRequest">Requests</string>
    <string name="str_loans">Loans</string>
    <string name="strBorrowed">Borrowed</string>
    <string name="strFavorites">Favorites</string>
    <string name="strPreferences">Preferences</string>
    <string name="strEndDate">End Date:</string>
    <string name="strExampleDate" translatable="false">12-12-1212</string>
    <string name="strEmptyString">This field can\'t be empty.</string>
    <string name="strNewRequest">New Request</string>
    <string name="strOrderByTipo">Order by type</string>
    <string name="facebook_app_id" translatable="false">1889855451403586</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1889855451403586</string>
    <string name="str_firebase_facebook_error">Firebase error using facebook login</string>
    <string name="strLogout">Logout</string>
    <string name="userEmptyError">User can not be empty.</string>
    <string name="passwordEmptyError">Password can not be empty.</string>
    <string name="strConfirmPassword">Confirm Password</string>
    <string name="userTooShortError">User must have at least 4 characters.</string>
    <string name="emailFormatError">E-mail format is incorrect.</string>
    <string name="strPasswordTooEasy">"Password must contains at least 8 characters, 1 Capital, 1 Number, 1 Lower and 1 Symbol. "</string>
    <string name="strPasswordsNotMatch">Passwords doesn\'t match.</string>
    <string name="requestIdTokenAndroid" translatable="false">451920547383-g2ru5a8n9fe7lngdtb4sgq4nn6ts6mvj.apps.googleusercontent.com</string>
    <string name="requestIdTokenWeb" translatable="false">451920547383-54cgbn52rq8a54l4tnmsvech9lv0p1hl.apps.googleusercontent.com</string>
    <string name="strFriends">Friends</string>
    <string name="strFriendList">Friends List</string>
    <string name="strProfile">Profile</string>
    <string name="strDeleteItem">Delete Item</string>
    <string name="strWasDeleted">was deleted.</string>
    <string name="strEditItem">Edit item</string>
    <string name="strWasAdded">was added.</string>
    <string name="strEdited">edited</string>
    <string name="strViewItem">View Item</string>
    <string name="strRequestSended">Request sended to the owner.</string>
    <string name="str_name_order">Order by name</string>
    <string name="strOrderByApplicant">Order by applicant</string>
    <string name="account_header">Account</string>
    <string name="account_title">Save user account</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="account_key" translatable="false">account_key</string>
    <string name="account_summary">Save user account at the first app login.</string>
    <string name="design_header">Design</string>
    <string name="night_mode_key" translatable="false">night_mode_key</string>
    <string name="night_mode_summary">Always app on night mode</string>
    <string name="night_mode">Night mode</string>
    <string name="automatic_mode_key" translatable="false">automatic_mode_key</string>
    <string name="automatic_mode_summary">App design changes with device style.</string>
    <string name="automatic_mode">Night-Day mode auto</string>
    <string name="help_header">Help</string>
    <string name="privacy_conditions">Privacy Conditions</string>
    <string name="help_point">Help Website</string>
    <string name="strCompleteUser">Complete user data to lend items and make requests.</string>
    <string name="strLoginError">User not register on database.</string>
    <string name="strRecoverPass">Change password</string>
    <string name="strPasswordMailRecoverSent">Mail sended to recover password.</string>
    <string name="strUserEdited">User edited successfully</string>
    <string name="strUpdatingError">Data isn\'t correct.</string>
    <string name="strErrorUpdating">Server error. Please try later.</string>
    <string name="notifications_header">Notifications</string>
    <string name="notification_key" translatable="false">notification_key</string>
    <string name="summary_notification">Notification are activated in the app</string>
    <string name="title_notification">Activate notifications</string>
    <string name="ringtone_key" translatable="false">ringtone_key</string>
    <string name="title_ringtone">Notifications tone</string>
    <string name="summary_ringtone">Select the tone for the app notification</string>
    <string name="strTipo">Type</string>
    <string name="RequestNotification">Request created! Click here to see it.</string>
</resources>