<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_constraint_standard"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/ivUserimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/person"
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/strUsername"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombreApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strMail" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRecoverPassword"
        style="@style/ButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strRecoverPass"
        android:layout_gravity="right"
        android:layout_marginTop="32dp"
        android:clickable="true"/>

    <Button
        android:id="@+id/btnEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/strEdit"
        android:layout_marginTop="32dp"/>
</LinearLayout>
</ScrollView>