<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.letmeapp.ui.dashboard.DashboardFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dashboard"
        >
        <action
            android:id="@+id/action_dashboardFragment_to_objectFragment"
            app:destination="@id/objectFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_userFragment"
            app:destination="@id/userFragment" />
    </fragment>
    <fragment
        android:id="@+id/objectFragment"
        android:name="com.example.letmeapp.ui.object.ObjectFragment"
        android:label="Object"
        tools:layout="@layout/fragment_object"/>
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.letmeapp.ui.about.AboutFragment"
        android:label="@string/strAbout"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.letmeapp.ui.user.UserFragment"
        android:label="@string/strUser"
        tools:layout="@layout/fragment_user" />
</navigation>