<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/primary_light"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <ImageView
        android:id="@+id/ivUserNavDrawer"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:background="@drawable/letmeapp"
        app:srcCompat="@drawable/shape_round_image" />

        <TextView
            android:id="@+id/tvTitleNavDrawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvSubtitleNavDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>